add MenuJDialog thêm nhân viên, khách hàng

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
         <artifactId>mssql-jdbc</artifactId>
         <version>12.6.3.jre11</version>
         </dependency>
- </dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE210</version>
+        </dependency>
+    </dependencies>
 
 <build>
     <resources>
